# skeletool

./: .flake8  .gitignore  .pre-commit-config.yaml  CONCEPT.md  Makefile  pyproject.toml
src/: __init__.py  application.py  container.py  exception.py  injectable.py  module.py
tests/: test_application.py  test_container.py  test_injectable.py  test_module.py
