[tool.poetry]
name = "skeletool"
version = "0.1.0"
description = ""
authors = ["Dmitrii Falko <dmitriy.falko@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.4.25"
flake8-bandit = "^3.0.0"
flake8-commas = "^2.1.0"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.13.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-annotations-coverage = "^0.0.6"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
